--- a/manifest.webmanifest.json
+++ b/manifest.webmanifest.json
@@ -16,7 +16,7 @@
   ],
   "start_url": "/login",
   "background_color": "#6c757d",
-  "display": "standalone",
+  "display": "fulscreen",
   "scope": "/",
   "theme_color": "#6c757d"
 }
