--- a/manifest.webmanifest.json
+++ b/manifest.webmanifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "SciFiA",
   "name": "Science Fiction Amsterdam",
-  "description": "Bood club app for a Scifi book club",
+  "description": "Bood club app for SciFi Amsterdam",
   "icons": [
     {
       "src": "/src/images/icon-192x192.png",
@@ -16,7 +16,7 @@
   ],
   "start_url": "/login",
   "background_color": "#6c757d",
-  "display": "fulscreen",
+  "display": "fullscreen",
   "scope": "/",
   "theme_color": "#6c757d"
 }
