--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,27 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SciFiA",
+  "name": "Science Fiction Amsterdam",
+  "description": "Book club app for SciFi Amsterdam",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "/images/icons/icon-62x62.png",
+      "type": "image/png",
+      "sizes": "62x62"
     },
     {
-      "src": "logo192.png",
+      "src": "/images/icons/icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "/images/icons/icon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "start_url": "/login",
+  "background_color": "#6c757d",
+  "display": "fullscreen",
+  "scope": "/",
+  "theme_color": "#6c757d"
 }
