--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "emoji-js": "^3.5.0",
     "emoji-mart": "^3.0.0",
     "font-awesome": "^4.7.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
